# SoftRenderer

./: .gitignore  LICENSE  README.md
Project/: CMakeLists.txt  Develope Note  ReadMe.txt  SoftRenderer.code-workspace  TestCases.cpp  TestCases.h  TypeDef.h  main.cpp  stdafx.cpp  stdafx.h  targetver.h
Project/Apps/: AppBase.h  ClipInHomogeneous.hpp  LifeOfTriangle.hpp  Sponza.hpp
Project/Assets/: ColorSquare.mtl  LifeOfTriangle.mtl  banner.mtl  lion.mtl  monkey.mtl  sponza.mtl  sponza_floor.mtl  sponza_floor2.mtl  teapot.mtl  tigre_sumatra_sketchfab.mtl  triangle.mtl  triangle2.mtl  untitled.mtl  wall.mtl
Project/Base/: CTypes.h  Camera.cpp  Camera.h  Color.cpp  Color.h  Component.cpp  Component.h  Csdl2.cpp  Csdl2.h  GameObject.cpp  GameObject.h  Input.cpp  Input.h  InputDefinition.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Model.cpp  Model.h  ObjLoader.cpp  ObjLoader.h  ObjMaterialReader.cpp  ObjMaterialReader.h  ObjParseHelper.h  Scene.cpp  Scene.h  Time.cpp  Time.h  Utils.h  Vertex.h  simplebmp.cpp  simplebmp.h
Project/Light/: Light.cpp  Light.h  LightManager.cpp  LightManager.h
Project/Log/: Debug.cpp  Debug.h  Log.cpp  Log.h  MessageLogContext.h
Project/Math/: Mathf.cpp  Mathf.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Random.h  Transform.cpp  Transform.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Project/Profiler/: SimpleProfiler.cpp  SimpleProfiler.h
Project/RenderSystem/: Material.cpp  Material.h  Rasterizer.cpp  Rasterizer.h  RenderSystem.cpp  RenderSystem.h  Shader.h  Texture.cpp  Texture.h
Project/Shape/: Bounds.cpp  Bounds.h  Circle.h  Line2d.cpp  Line2d.h  Plane.cpp  Plane.h  Rect.h
SetUpProject/SetUp_Windows/: SoftRenderer.sln
SetUpProject/SetUp_Windows/SoftRenderer/: Rasterizer.cpp  Rasterizer.h  ReadMe.txt  SoftRenderer.filters  SoftRenderer.vcxproj  TypeDef.h  main.cpp  stdafx.cpp
(+7 files in other folders)
